--- a/index.html
+++ b/index.html
@@ -14,6 +14,48 @@
 		/>
 	</head>
 	<body>
-		<div class="flex">Hello world</div>
+		<div class="pt-12">
+			<h1 class="text-center text-4xl font-bold">Live anywhere</h1>
+			<h2 class="text-gray-400 text-center pt-3 text-xl font-light mb-10">
+				Keep calm & travel on
+			</h2>
+			<div class="grid grid-cols-3 gap-x-6 max-w-5xl mx-auto">
+				<div>
+					<div class="h-96">
+						<img
+							src="https://images.unsplash.com/photo-1640340435016-1964cf4e723b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=464&q=80"
+							alt="photo"
+							class="rounded-2xl w-full h-full object-cover"
+						/>
+					</div>
+					<h3 class="text-center mt-5 font-semibold hover:scale-50">
+						Enjoy the greate cold
+					</h3>
+					<h4 class="text-center mt-1 text-gray-400">6,879 properties</h4>
+				</div>
+				<div>
+					<div class="h-96">
+						<img
+							src="https://images.unsplash.com/photo-1506555191898-a76bacf004ca?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=387&q=80"
+							alt="photo"
+							class="rounded-2xl w-full h-full object-cover"
+						/>
+					</div>
+					<h3 class="text-center mt-5 font-semibold">Enjoy the greate cold</h3>
+					<h4 class="text-center mt-1 text-gray-400">6,879 properties</h4>
+				</div>
+				<div>
+					<div class="h-96">
+						<img
+							src="https://images.unsplash.com/photo-1639843885527-43b098a9661a?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=465&q=80"
+							alt="photo"
+							class="rounded-2xl w-full h-full object-cover"
+						/>
+					</div>
+					<h3 class="text-center mt-5 font-semibold">Enjoy the greate cold</h3>
+					<h4 class="text-center mt-1 text-gray-400">6,879 properties</h4>
+				</div>
+			</div>
+		</div>
 	</body>
 </html>
